force-app/main/default/objects/FormCreation__c/FormCreation__c.object-meta.xml
<CustomObject>
    <label>帳票作成用</label>
    <nameField>
        <label>帳票作成用名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>