force-app/main/default/objects/FormCreation__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <label>A</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>