force-app/main/default/objects/FormCreation__c/fields/AA__c.field-meta.xml
<CustomField>
    <fullName>AA__c</fullName>
    <label>AA</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>