force-app/main/default/objects/FormCreation__c/fields/AB__c.field-meta.xml
<CustomField>
    <fullName>AB__c</fullName>
    <label>AB</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>