force-app/main/default/objects/FormCreation__c/fields/B__c.field-meta.xml
<CustomField>
    <fullName>B__c</fullName>
    <label>B</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>