force-app/main/default/objects/FormCreation__c/fields/CSS__c.field-meta.xml
<CustomField>
    <fullName>CSS__c</fullName>
    <label>CSS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>