force-app/main/default/objects/FormCreation__c/fields/E__c.field-meta.xml
<CustomField>
    <fullName>E__c</fullName>
    <label>E</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>