force-app/main/default/objects/FormCreation__c/fields/F__c.field-meta.xml
<CustomField>
    <fullName>F__c</fullName>
    <label>F</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>