force-app/main/default/objects/FormCreation__c/fields/G__c.field-meta.xml
<CustomField>
    <fullName>G__c</fullName>
    <label>G</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>