force-app/main/default/objects/FormCreation__c/fields/H__c.field-meta.xml
<CustomField>
    <fullName>H__c</fullName>
    <label>H</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>