force-app/main/default/objects/FormCreation__c/fields/I__c.field-meta.xml
<CustomField>
    <fullName>I__c</fullName>
    <label>I</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>