force-app/main/default/objects/FormCreation__c/fields/J__c.field-meta.xml
<CustomField>
    <fullName>J__c</fullName>
    <label>J</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>