force-app/main/default/objects/FormCreation__c/fields/K__c.field-meta.xml
<CustomField>
    <fullName>K__c</fullName>
    <label>K</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>