force-app/main/default/objects/FormCreation__c/fields/L__c.field-meta.xml
<CustomField>
    <fullName>L__c</fullName>
    <label>L</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>