force-app/main/default/objects/FormCreation__c/fields/M__c.field-meta.xml
<CustomField>
    <fullName>M__c</fullName>
    <label>M</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>