force-app/main/default/objects/FormCreation__c/fields/O__c.field-meta.xml
<CustomField>
    <fullName>O__c</fullName>
    <label>O</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>