force-app/main/default/objects/FormCreation__c/fields/P__c.field-meta.xml
<CustomField>
    <fullName>P__c</fullName>
    <label>P</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>