force-app/main/default/objects/FormCreation__c/fields/Q__c.field-meta.xml
<CustomField>
    <fullName>Q__c</fullName>
    <label>Q</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>