force-app/main/default/objects/FormCreation__c/fields/R__c.field-meta.xml
<CustomField>
    <fullName>R__c</fullName>
    <label>R</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>