force-app/main/default/objects/FormCreation__c/fields/S__c.field-meta.xml
<CustomField>
    <fullName>S__c</fullName>
    <label>S</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>