force-app/main/default/objects/FormCreation__c/fields/T__c.field-meta.xml
<CustomField>
    <fullName>T__c</fullName>
    <label>T</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>