force-app/main/default/objects/FormCreation__c/fields/Title1__c.field-meta.xml
<CustomField>
    <fullName>Title1__c</fullName>
    <label>Title1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>