force-app/main/default/objects/FormCreation__c/fields/Title2__c.field-meta.xml
<CustomField>
    <fullName>Title2__c</fullName>
    <label>Title2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>