force-app/main/default/objects/FormCreation__c/fields/U__c.field-meta.xml
<CustomField>
    <fullName>U__c</fullName>
    <label>U</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>