force-app/main/default/objects/FormCreation__c/fields/V__c.field-meta.xml
<CustomField>
    <fullName>V__c</fullName>
    <label>V</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>