force-app/main/default/objects/FormCreation__c/fields/W__c.field-meta.xml
<CustomField>
    <fullName>W__c</fullName>
    <label>W</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>