force-app/main/default/objects/FormCreation__c/fields/X__c.field-meta.xml
<CustomField>
    <fullName>X__c</fullName>
    <label>X</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>