force-app/main/default/objects/FormCreation__c/fields/Y__c.field-meta.xml
<CustomField>
    <fullName>Y__c</fullName>
    <label>Y</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>